--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
