--- a/app/package.json
+++ b/app/package.json
@@ -20,10 +20,12 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
